# SU2_EDU

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac
SU2_EDU.xcodeproj/: project.pbxproj
SU2_EDU.xcodeproj/project.xcworkspace/xcshareddata/: SU2_EDU.xccheckout
SU2_EDU.xcodeproj/project.xcworkspace/xcuserdata/fpalacios.xcuserdatad/: UserInterfaceState.xcuserstate
SU2_EDU.xcodeproj/xcuserdata/fpalacios.xcuserdatad/xcschemes/: SU2_EDU.xcscheme
include/: SU2_EDU.hpp  config_structure.hpp  config_structure.inl  definition_structure.hpp  dual_grid_structure.hpp  dual_grid_structure.inl  geometry_structure.hpp  geometry_structure.inl  grid_movement_structure.hpp  grid_movement_structure.inl  integration_structure.hpp  integration_structure.inl  iteration_structure.hpp  linear_solvers_structure.hpp  linear_solvers_structure.inl  matrix_structure.hpp  matrix_structure.inl  numerics_structure.hpp  numerics_structure.inl  option_structure.hpp  output_structure.hpp  primal_grid_structure.hpp  primal_grid_structure.inl  solver_structure.hpp  solver_structure.inl  variable_structure.hpp  variable_structure.inl  vector_structure.hpp  vector_structure.inl
m4/: ax_tls.m4  metis.m4  openmp.m4
src/: SU2_EDU.cpp  config_structure.cpp  definition_structure.cpp  dual_grid_structure.cpp  geometry_structure.cpp  grid_movement_structure.cpp  integration_structure.cpp  integration_time.cpp  iteration_structure.cpp  linear_solvers_structure.cpp  matrix_structure.cpp  numerics_direct_mean.cpp  numerics_direct_turbulent.cpp  numerics_structure.cpp  output_paraview.cpp  output_structure.cpp  output_tecplot.cpp  primal_grid_structure.cpp  solver_direct_mean.cpp  solver_direct_turbulent.cpp  solver_structure.cpp  variable_direct_mean.cpp  variable_direct_turbulent.cpp  variable_structure.cpp  vector_structure.cpp
src/.deps/: SU2_EDU.Po  config_structure.Po  definition_structure.Po  dual_grid_structure.Po  geometry_structure.Po  grid_movement_structure.Po  integration_structure.Po  integration_time.Po  iteration_structure.Po  linear_solvers_structure.Po  matrix_structure.Po  numerics_direct_mean.Po  numerics_direct_turbulent.Po  numerics_structure.Po  output_paraview.Po  output_structure.Po  output_tecplot.Po  primal_grid_structure.Po  solver_direct_mean.Po  solver_direct_turbulent.Po  solver_structure.Po  variable_direct_mean.Po  variable_direct_turbulent.Po  variable_structure.Po  vector_structure.Po
